include/tonc_tte.h


//! \name Color lut indices
//\{
#define TTE_INK			0
#define TTE_SHADOW		1
#define TTE_PAPER		2
#define TTE_SPECIAL		3

//\}



// --------------------------------------------------------------------
// CLASSES
// --------------------------------------------------------------------

//! Glyph render function format.
typedef void (*fnDrawg)(uint gid);




//! Font description struct.
/*!	The \c TFont contains a description of the font, including pointers
	to the glyph data and width data (for VWF fonts), an ascii-offset
	for when the first glyph isn't for ascii-null (which is likely. 
	Usually it starts at ' ' (32)).<br>
	The font-bitmap is a stack of cells, each containing one glyph 
	each. The cells and characters need not be the same size, but 
	the character glyph must fit within the cell.<br>

	The formatting of the glyphs themselves should fit the rendering 
	procedure. The default renderers use 1bpp 8x8 tiled graphics, 
	where for multi-tiled cells the tiles are in a <b>vertical</b> 
	'strip' format. In an 16x16 cell, the 4 tiles would be arranged as:

	<table border=1 cellpadding=2 cellspacing=0>
	<tr> <td>0</td> <td>2</td></tr>
	<tr> <td>1</td> <td>3</td></tr>
	</table>
*/
typedef struct TFont
{
	const void	*data;		//!< Character data.
	const u8	*widths;	//!< Width table for variable width font.
	const u8	*heights;	//!< Height table for variable height font.
	u16	charOffset;			//!< Character offset
	u16	charCount;			//!< Number of characters in font.
	u8	charW;				//!< Character width (fwf).
	u8	charH;				//!< Character height.
	u8	cellW;				//!< Glyph cell width.
	u8	cellH;				//!< Glyph cell height.
	u16	cellSize;			//!< Cell-size (bytes).
	u8	bpp;				//!< Font bitdepth;
	u8	extra;				//!< Padding. Free to use.	
} TFont;

IWRAM_CODE void chr4r_drawg_b1cts_fast(uint gid);


//\}

/*!	\}	*/


/*! \addtogroup grpTTEBmp	*/
/*!	\{	*/

void tte_init_bmp(int vmode, const TFont *font, fnDrawg proc);


//! \name 8bpp bitmaps
//\(
void bmp8_erase(int left, int top, int right, int bottom);


void bmp8_drawg(uint gid);

void bmp8_drawg_t(uint gid);

IWRAM_CODE void bmp8_drawg_b1cts_fast(uint gid);

void bmp8_drawg_b1cos(uint gid);

//\}

//! \name 16bpp bitmaps
//\{
void bmp16_erase(int left, int top, int right, int bottom);


void bmp16_drawg(uint gid);

void bmp16_drawg_t(uint gid);


void bmp16_drawg_b1cts(uint gid);

void bmp16_drawg_b1cos(uint gid);

//\}

/*!	\}	*/


/*! \addtogroup grpTTEObj		*/
/*	\{	*/

void tte_init_obj(OBJ_ATTR *dst, u32 attr0, u32 attr1, u32 attr2, 
	u32 clrs, u32 bupofs, const TFont *font, fnDrawg proc);


void obj_erase(int left, int top, int right, int bottom);


void obj_drawg(uint gid);