natu/private/tte.nim


proc chr4rDrawgB1CTS*(gid: uint) {.importc: "chr4r_drawg_b1cts_fast", header: "tonc.h".}
  ## Render 1bpp fonts to 4bpp tiles, row-major


# Bitmap Text
# -----------
# Text for 16bpp and 8bpp bitmap surfaces: modes 3, 4 and 5.
# Note that TTE does not update the pointer of the surface for
#  page-flipping. You'll have to do that yourself.

proc tteInitBmp*(vmode: int; font: Font = addr(vwfDefault); fn: FnDrawg = nil) {.importc: "tte_init_bmp", header: "tonc.h".}
  ## Initialize text system for bitmap fonts.
  ## `vmode` Video mode (3,4 or 5).
  ## `font`  Font to initialize with.
  ## `fn`    Glyph renderer.

# 8bpp bitmaps
proc bmp8Erase*(left, top, right, bottom: int) {.importc: "bmp8_erase", header: "tonc.h".}
proc bmp8Drawg*(gid: uint) {.importc: "bmp8_drawg", header: "tonc.h".}
  ## Linear 8bpp bitmap glyph renderer, opaque.
  ## `gid`  Character to plot.
  ## Font params: bitmapped, 8bpp.
  ## Untested
proc bmp8DrawgT*(gid: uint) {.importc: "bmp8_drawg_t", header: "tonc.h".}
  ## Linear 8bpp bitmap glyph renderer, transparent.
  ## `gid` Character to plot.
  ## Font params: bitmapped, 8bpp. special cattr is transparent.
  ## Untested
proc bmp8DrawgB1CTS*(gid: uint) {.importc: "bmp8_drawg_b1cts_fast", header: "tonc.h".}
  ## 8bpp bitmap glyph renderer. 1->8bpp recolored, any size, transparent
proc bmp8DrawgB1COS*(gid: uint) {.importc: "bmp8_drawg_b1cos", header: "tonc.h".}
  ## 8bpp bitmap glyph renderer. 1->8bpp recolored, any size, opaque

# 16bpp bitmaps
proc bmp16Erase*(left, top, right, bottom: int) {.importc: "bmp16_erase", header: "tonc.h".}
  ## Erase part of the 16bpp text canvas.
  
proc bmp16Drawg*(gid: uint) {.importc: "bmp16_drawg", header: "tonc.h".}
  ## Linear 16bpp bitmap glyph renderer, opaque.
  ## Works on a 16 bpp bitmap.
  ## `gid` Character to plot.
  ## Font params: bitmapped, 16bpp.
  
proc bmp16DrawgT*(gid: uint) {.importc: "bmp16_drawg_t", header: "tonc.h".}
  ## Linear 16bpp bitmap glyph renderer, transparent.
  ## Works on a 16 bpp bitmap
  ## `gid` Character to plot.
  ## Font params: bitmapped, 16bpp. special cattr is transparent.
  
proc bmp16DrawgB1CTS*(gid: uint) {.importc: "bmp16_drawg_b1cts", header: "tonc.h".}
  ## Linear bitmap, 16bpp transparent character plotter.
  ## Works on a 16 bpp bitmap (mode 3 or 5).
  ## `gid` Character to plot.
  ## Font req: Any width/height. 1bpp font, 8px strips.
  
proc bmp16DrawgB1COS*(gid: uint) {.importc: "bmp16_drawg_b1cos", header: "tonc.h".}
  ## Linear bitmap, 16bpp opaque character plotter.
  ## Works on a 16 bpp bitmap (mode 3 or 5).
  ## `gid` Character to plot.
  ## Font req: Any width/height. 1bpp font, 8px strips.

# Objects
# -------
# Text using object (1 glyph per object)

proc tteInitObj*(dst: ObjAttrPtr; attr0, attr1, attr2: uint32; clrs: uint32, bupofs: uint32; font: Font = addr(fwfDefault); fn: FnDrawg = nil) {.importc: "tte_init_obj", header: "tonc.h".}
  ## `obj`    Destination object.
  ## `attr0`  Base obj.attr0. 
  ## `attr1`  Base obj.attr1.
  ## `attr2`  Base obj.attr2.
  ## `clrs`   Colors to use for the text. The palette entries used depends on `attr2` and `bupofs`.
  ## `bupofs` Flags for font bit-unpacking. Basically indicates pixel values (and hence palette use).
  ## `font`   Font to initialize with.
  ## `fn`     Character plotting procedure.
  ## Note: The TTE-obj system uses the surface differently than then rest. Be careful when modifying the surface data.

proc objErase*(left, top, right, bottom: int) {.importc: "obj_erase", header: "tonc.h".}
  ## Unwind the object text-buffer
proc objDrawg*(gid: uint) {.importc: "obj_drawg", header: "tonc.h".}
  ## Character-plot for objects. 



# Extras
# ------

template ink*(tc: TextContext | TextContextObj): uint16 =  tc.cattr[TTE_INK]
template shadow*(tc: TextContext | TextContextObj): uint16 =  tc.cattr[TTE_SHADOW]
template paper*(tc: TextContext | TextContextObj): uint16 =  tc.cattr[TTE_PAPER]
template special*(tc: TextContext | TextContextObj): uint16 =  tc.cattr[TTE_SPECIAL]

template `ink=`*(tc: TextContext | var TextContextObj, v: uint16) =  tc.cattr[TTE_INK] = v
template `shadow=`*(tc: TextContext | var TextContextObj, v: uint16) =  tc.cattr[TTE_SHADOW] = v
template `paper=`*(tc: TextContext | var TextContextObj, v: uint16) =  tc.cattr[TTE_PAPER] = v
template `special=`*(tc: TextContext | var TextContextObj, v: uint16) =  tc.cattr[TTE_SPECIAL] = v
